--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -50,7 +50,7 @@
 </table>
 
 <p>
-    Hi! I'm Zhengsong(Zeus) Huang (黄政菘).
+    Hi! I'm Zhengsong(Wilson) Huang (黄政菘).
 </p>
 <p>
     I will graduate from Sun Yat-sen University in July 2025.
