--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -38,7 +38,7 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: calc($spacing-unit / 2);
 }
 
 
@@ -136,7 +136,7 @@ a {
 blockquote {
   color: $grey-color;
   // border-left: 4px solid $grey-color-light;
-  padding-left: $spacing-unit / 2;
+  padding-left: calc($spacing-unit / 2);
   @include relative-font-size(1.125);
   letter-spacing: -1px;
   font-style: italic;
@@ -184,8 +184,8 @@ pre {
   max-width:         calc(#{$content-width} - (#{$spacing-unit}));
   margin-right: auto;
   margin-left: auto;
-  padding-right: $spacing-unit / 2;
-  padding-left: $spacing-unit / 2;
+  padding-right: calc($spacing-unit / 2);
+  padding-left: calc($spacing-unit / 2);
   @extend %clearfix;
 
   @media screen and (min-width: $on-large) {
@@ -247,8 +247,8 @@ table {
     }*/
   }
   th, td {
-    padding: ($spacing-unit / 3) ($spacing-unit / 2);
-    border:none;		    
+    padding: calc($spacing-unit / 3) calc($spacing-unit / 2);
+    border:none;
     outline:none;
   }
   th {
