--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -106,7 +106,7 @@
         <div class="footer-col-wrapper">
         <div class="footer-col one-half">
             Updated in Mar. 2024<br/>
-            &copy; 2022-2024 Zeus Huang.<br/>
+            &copy; 2022-2024 Wilson Huang.<br/>
             Powered by <a href="http://jekyllrb.com">Jekyll</a> &amp; <a
             href="https://pages.github.com/">Github Pages</a>.
         </div>
