--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -42,7 +42,7 @@
             <p><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email: huangzhs8 [at] mail2 [dot] sysu [dot] edu [dot] cn</p>
             <p>
                 <a href="{{ 'blogs' | absolute_url }}"><i class="fas fa-blog"></i> Blog</a> /
-                <a href="https://github.com/Hwylzeus"><i class="fab fa-fw fa-github" aria-hidden="true"></i> Github</a>
+                <a href="https://github.com/wi1sonh"><i class="fab fa-fw fa-github" aria-hidden="true"></i> Github</a>
             </p>
             </td>
         </tr>
